--- a/01-index.qmd
+++ b/01-index.qmd
@@ -1,28 +1,22 @@
 ---
 title: "Welcome"
+format:
+  html:
+    fontsize: 0.8em
+    linestretch: 1
 ---
 
-# About me
++----------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| ![](images/2-02.jpg){fig-align="center"}           | Since a child, I have developed a huge curiosity toward nature, which undoubtedly influenced my decision for Agronomy. I dedicate my career efforts to develop decision support tools that hasten the adoption of sustainable management practices for agriculture. |
+|                                                    |                                                                                                                                                                                                                                                                     |
+|                                                    | My passion and expertise are in cropping systems, soil fertility and crop nutrition, with a strong component of modern data analytics.                                                                                                                              |
++----------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 
-::: panel-tabset
-## 🙋🏻Bio
+: Hi, there! My name is Adrian Correndo. I was born and raised in Buenos Aires, Argentina. Since 2018, I live with my wife (Milagros) and our little girl (Amelie) in Manhattan, Kansas, USA.
 
-I was born in 1987 and raised up in Buenos Aires, Argentina. I'm married to Milagros, and we are parents of Amelie. Since a child, I developed a huge curiosity about nature, particularly biology and weather, which undoubtedly influenced my career decision. Agronomy was the perfect fit for my interests. I got my Bachelor's at the University of Buenos Aires, where I also obtained my Master in Soil Sciences while working in research and extension for the Southern Cone Program of the International Plant Nutrition Institute (IPNI). I proudly obtained my Ph.D. degree in Agronomy at Kansas State University. Cropping systems, with focus on soil fertility and crop nutrition, and data science are my passion and expertise within the vast agronomy-world.
+## 🌽Interests
 
-## 🎓Education
-
--   Ph.D., Agronomy. Kansas State University. 2021.
-
--   MS, Soil Science. Universidad de Buenos Aires. 2018.
-
--   BS, Agronomy. Universidad de Buenos Aires. 2011.
-
-# 
-:::
-
-# 🌽Interests
-
-Sustainable Farming \| Crop Nutrition \| Predictive Ag \| Digital Solutions
+Sustainable Farming \| Crop Nutrition \| Data Science \| Digital Solutions
 
 A great crop hides a whole story of questions underneath. Curiosity drives farmers, agronomists, and scientists to achieve improvements in our farming systems and communities.
 
