--- a/01-index.qmd
+++ b/01-index.qmd
@@ -6,13 +6,19 @@ format:
     linestretch: 1
 ---
 
-+----------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| ![](images/2-02.jpg){fig-align="center"}           | Since a child, I have developed a huge curiosity toward nature, which undoubtedly influenced my decision for Agronomy. I dedicate my career efforts to develop decision support tools that hasten the adoption of sustainable management practices for agriculture. |
-|                                                    |                                                                                                                                                                                                                                                                     |
-|                                                    | My passion and expertise are in cropping systems, soil fertility and crop nutrition, with a strong component of modern data analytics.                                                                                                                              |
-+----------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+# Bio
 
-: Hi, there! My name is Adrian Correndo. I was born and raised in Buenos Aires, Argentina. Since 2018, I live with my wife (Milagros) and our little girl (Amelie) in Manhattan, Kansas, USA.
+::: {layout-ncol="2"}
+# 🙋🏻
+
+| Hi, there! My name is Adrian Correndo. I was born and raised in Buenos Aires, Argentina. Since 2018, I live with my wife (Milagros) and our little girl (Amelie) in Manhattan, Kansas, USA. 
+| 
+| Since a child, I have developed a huge curiosity toward nature, which undoubtedly influenced my decision for Agronomy . I dedicate my career efforts to develop decision support tools that hasten the adoption of sustainable management practices for agriculture. 
+| 
+| My passion and expertise are in cropping systems, soil fertility and crop nutrition, with a strong component of modern data analytics and digital solutions.
+
+![](images/2-02.jpg){fig-align="center" width="368"}
+:::
 
 ## 🌽Interests
 
