--- a/03-publications.qmd
+++ b/03-publications.qmd
@@ -9,39 +9,43 @@ format:
 ::: panel-tabset
 # 📑Refereed
 
-1.  Secchi, M.A., **Correndo, A.A.**, Stamm, M., Durrett , T., Vara Prasad, P.V., Messina, C., and Ciampitti , I.A., 202#. Suitability of different environments for winter canola oil production in the United States of America. *Field Crops Res*. *In-press.*
+1.  Correndo, A.A., Moro Rosso, L.H., Hernandez, C.H., Bastos, L.M., Nieto, L., Holzworth, D., Ciampitti, I.A., 202#. *Under review at Journal of Open Access Software*. **Pre-print** available at: at:[https://github.com/openjournals/joss-papers/blob/joss.04655](https://github.com/openjournals/joss-papers/blob/joss.04655/joss.04655/10.21105.joss.04655.pdf)
 
-2.  **Correndo, A.A.**, McArtor, B., Prestholt, A., Hernandez, C., Kyveryga, P., and Ciampitti , I.A., 2022. Interactive Soybean Variable-Rate Seeding Simulator for Farmers. *Agron. J. In-press.* <https://doi.org/10.1002/agj2.21181>
+2.  Correndo, A.A., Pearce, A.W., Bolster, C.H., Spargo, J.T., Osmond, D., Ciampitti, I.A., 2022. The Soiltestcorr R Package: An Accessible Framework for Reproducible Correlation Analysis of Crop Yield and Soil Test Data. *Under review at Software X*. **Pre-print** available at SSRN: <https://ssrn.com/abstract=4169750> or [http://dx.doi.org/10.2139/ssrn.4169750](https://dx.doi.org/10.2139/ssrn.4169750)
 
-3.  Sadras, V.O., Giordano, N., **Correndo, A.A.**, Cossani, M., Ferreyra, J.M., Caviglia, O.P., Coulter, J.A., Ciampitti , I.A., and Lollato,R.A., 2022. Temperature-driven developmental modulation of yield response to nitrogen in wheat and maize. *Frontiers in Agronomy.* <https://doi.org/10.3389/fagro.2022.903340>
+3.  Secchi, M.A., **Correndo, A.A.**, Stamm, M., Durrett , T., Vara Prasad, P.V., Messina, C., and Ciampitti , I.A., 202#. Suitability of different environments for winter canola oil production in the United States of America. *Field Crops Res*. *In-press.*
 
-4.  **Correndo, A.A.**, Adee, E., Moro Rosso, L.H., Tremblay, N., Vara Prasad, P.V., Du, J., and Ciampitti, I.A., 2022. Footprints of corn nitrogen management on the following soybean crop. *Agron. J.* 1-14. <https://doi.org/10.1002/agj2.21023>
+4.  **Correndo, A.A.**, McArtor, B., Prestholt, A., Hernandez, C., Kyveryga, P., and Ciampitti , I.A., 2022. Interactive Soybean Variable-Rate Seeding Simulator for Farmers. *Agron. J. In-press.* <https://doi.org/10.1002/agj2.21181>
 
-5.  **Correndo, A.A.**, Tremblay, N., ...Ciampitti, I.A. et al., 2021. Unraveling uncertainty drivers of the maize yield response to nitrogen: A Bayesian and machine learning approach. *Agr. For. Meteorol.* 311, 108668. <https://doi.org/10.1016/j.agrformet.2021.108668>
+5.  Sadras, V.O., Giordano, N., **Correndo, A.A.**, Cossani, M., Ferreyra, J.M., Caviglia, O.P., Coulter, J.A., Ciampitti , I.A., and Lollato,R.A., 2022. Temperature-driven developmental modulation of yield response to nitrogen in wheat and maize. *Frontiers in Agronomy.* <https://doi.org/10.3389/fagro.2022.903340>
 
-6.  **Correndo, A.A.**, Gutierrez-Boem, F.H., Garcia, F.O.,... Salvagiotti, F., 2021. Attainable yield and soil texture as drivers of maize response to nitrogen: a synthesis analysis for Argentina. *Field Crops Res.* 273, 108299. <https://doi.org/10.1016/j.fcr.2021.108299>
+6.  **Correndo, A.A.**, Adee, E., Moro Rosso, L.H., Tremblay, N., Vara Prasad, P.V., Du, J., and Ciampitti, I.A., 2022. Footprints of corn nitrogen management on the following soybean crop. *Agron. J.* 1-14. <https://doi.org/10.1002/agj2.21023>
 
-7.  **Correndo, A.A.**, Fernandez, J., Prasad, V., Ciampitti, I.A., 2021. Do water and nitrogen management practices impact grain quality in maize? *Agronomy* 11(9), 1851. <https://doi.org/10.3390/agronomy11091851>
+7.  **Correndo, A.A.**, Tremblay, N., ...Ciampitti, I.A. et al., 2021. Unraveling uncertainty drivers of the maize yield response to nitrogen: A Bayesian and machine learning approach. *Agr. For. Meteorol.* 311, 108668. <https://doi.org/10.1016/j.agrformet.2021.108668>
 
-8.  Ciampitti, I.A., de Borja Reis, A.F., Cordova, C., Castellano, M.J., Archontoulis, S., **Correndo, A.A.**, Antunes de Almeida, L.F., Moro Rosso, L.H.,, 202X. Revisiting biological nitrogen fixation dynamics in soybeans. *Front. Plant Sci.* 12, 727021. <https://doi.org/10.3389/fpls.2021.727021>
+8.  **Correndo, A.A.**, Gutierrez-Boem, F.H., Garcia, F.O.,... Salvagiotti, F., 2021. Attainable yield and soil texture as drivers of maize response to nitrogen: a synthesis analysis for Argentina. *Field Crops Res.* 273, 108299. <https://doi.org/10.1016/j.fcr.2021.108299>
 
-9.  Moro Rosso, L.H., de Borja Reis, A.F., **Correndo, A.A.**, Ciampitti, I.A., 2021. XPolaris: an R-package to retrieve United States soil data at 30-meter resolution. *BMC Res Notes* 14, 327. <https://doi.org/10.1186/s13104-021-05729-y>
+9.  **Correndo, A.A.**, Fernandez, J., Prasad, V., Ciampitti, I.A., 2021. Do water and nitrogen management practices impact grain quality in maize? *Agronomy* 11(9), 1851. <https://doi.org/10.3390/agronomy11091851>
 
-10. **Correndo, A.A.**, Hefley, T., Holzworth, D., Ciampitti, I.A., 2021. Revisiting linear regression to test agreement in continuous predicted-observed datasets. *Agr. Syst.* 192, 103194. <https://doi.org/10.1016/j.agsy.2021.103194>
+10. Ciampitti, I.A., de Borja Reis, A.F., Cordova, C., Castellano, M.J., Archontoulis, S., **Correndo, A.A.**, Antunes de Almeida, L.F., Moro Rosso, L.H.,, 202X. Revisiting biological nitrogen fixation dynamics in soybeans. *Front. Plant Sci.* 12, 727021. <https://doi.org/10.3389/fpls.2021.727021>
 
-11. **Correndo, A.A.**, Moro Rosso, L.H., Ciampitti, I.A., 2021. Retrieving and processing agro-meteorological from API-client sources using R software. *BMC Res. Notes* 14, 205. <https://doi.org/10.1186/s13104-021-05622-8>
+11. Moro Rosso, L.H., de Borja Reis, A.F., **Correndo, A.A.**, Ciampitti, I.A., 2021. XPolaris: an R-package to retrieve United States soil data at 30-meter resolution. *BMC Res Notes* 14, 327. <https://doi.org/10.1186/s13104-021-05729-y>
 
-12. **Correndo, A.A.**, Rubio, G., Garcia, F.O., Ciampitti, I.A., 2021. Subsoil-potassium depletion accounts for the nutrient budget in high-potassium agricultural soils. *Sci. Rep.* 11, 11597. <https://doi.org/10.1038/s41598-021-90297-1>
+12. **Correndo, A.A.**, Hefley, T., Holzworth, D., Ciampitti, I.A., 2021. Revisiting linear regression to test agreement in continuous predicted-observed datasets. *Agr. Syst.* 192, 103194. <https://doi.org/10.1016/j.agsy.2021.103194>
 
-13. **Correndo, A.A.**, Rotundo, J.L., Tremblay, N., et al., 2021. Assessing the uncertainty of maize yield with no nitrogen fertilization. *Field Crops Res.* 260, 107985. <https://doi.org/10.1016/j.fcr.2020.107985>
+13. **Correndo, A.A.**, Moro Rosso, L.H., Ciampitti, I.A., 2021. Retrieving and processing agro-meteorological from API-client sources using R software. *BMC Res. Notes* 14, 205. <https://doi.org/10.1186/s13104-021-05622-8>
 
-14. Appelhans, S.C., Carciochi, W.D., **Correndo, A.A.**, et al. 2021. Predicting soil test phosphorus decrease in non‐P‐fertilized conditions. *Eur. J. Soil Sci.* 2021; 1-- 11. <https://doi.org/10.1111/ejss.12946>
+14. **Correndo, A.A.**, Rubio, G., Garcia, F.O., Ciampitti, I.A., 2021. Subsoil-potassium depletion accounts for the nutrient budget in high-potassium agricultural soils. *Sci. Rep.* 11, 11597. <https://doi.org/10.1038/s41598-021-90297-1>
 
-15. **Correndo, A.A.**, Salvagiotti, F., García, F.O., Gutiérrez Boem, F.H., 2017. A modification of the arcsine-log calibration curve for analysing soil test value-relative yield relationships. *Crop and Pasture Science* 68 (3): 297-304. <https://doi.org/10.1071/CP16444>
+15. **Correndo, A.A.**, Rotundo, J.L., Tremblay, N., et al., 2021. Assessing the uncertainty of maize yield with no nitrogen fertilization. *Field Crops Res.* 260, 107985. <https://doi.org/10.1016/j.fcr.2020.107985>
 
-16. Barbieri, P.A., Sainz Rozas, H.R. Wyngaard, N., Eyherabide, M., Reussi Calvo, N.I., Salvagotti, F., **Correndo, A.A.**, et al., 2017. Can Edaphic Variables Improve DTPA-Based Zinc Diagnosis in Corn?. *Soil Sci. Soc. Am. J.* 81, 556-563. <https://doi.org/10.2136/sssaj2016.09.0316>
+16. Appelhans, S.C., Carciochi, W.D., **Correndo, A.A.**, et al. 2021. Predicting soil test phosphorus decrease in non‐P‐fertilized conditions. *Eur. J. Soil Sci.* 2021; 1-- 11. <https://doi.org/10.1111/ejss.12946>
 
-17. **Correndo, A.A.**, Boxler, M., García, F.O., 2015. Economic analysis of fertilization management with focus on the long term. *Ci. Suelo* 33(2), 197-212. <http://www.suelos.org.ar/publicaciones/vol_33n2/v33n2a04.pdf>
+17. **Correndo, A.A.**, Salvagiotti, F., García, F.O., Gutiérrez Boem, F.H., 2017. A modification of the arcsine-log calibration curve for analysing soil test value-relative yield relationships. *Crop and Pasture Science* 68 (3): 297-304. <https://doi.org/10.1071/CP16444>
+
+18. Barbieri, P.A., Sainz Rozas, H.R. Wyngaard, N., Eyherabide, M., Reussi Calvo, N.I., Salvagotti, F., **Correndo, A.A.**, et al., 2017. Can Edaphic Variables Improve DTPA-Based Zinc Diagnosis in Corn?. *Soil Sci. Soc. Am. J.* 81, 556-563. <https://doi.org/10.2136/sssaj2016.09.0316>
+
+19. **Correndo, A.A.**, Boxler, M., García, F.O., 2015. Economic analysis of fertilization management with focus on the long term. *Ci. Suelo* 33(2), 197-212. <http://www.suelos.org.ar/publicaciones/vol_33n2/v33n2a04.pdf>
 
 # 🎙️Extension
 
@@ -49,47 +53,49 @@ format:
 
 ### Most recent (20)
 
-1.  Ciampitti, I.A., **Correndo, A.A.**, Sittel, M., Redmond, C. 2022. Drought and heat stress in Kansas soybean fields. Agronomy eUpdates. Kansas State university. August 18th, 2022: Issue 920. https://eupdate.agronomy.ksu.edu/article_new/drought-and-heat-stress-in-kansas-soybean-fields-508-1
+1.  Ciampitti, I.A., **Correndo, A.A.**, Sittel, M., Redmond, C. 2022. Drought and heat stress in Kansas soybean fields. Agronomy eUpdates. Kansas State university. August 25th, 2022: Issue 921. <https://eupdate.agronomy.ksu.edu/article_new/soybean-yield-potential-estimation-509-4>
 
-2.  Ciampitti, I.A., **Correndo, A.A.**. 2022. Drought and heat stress in Kansas corn fields. Agronomy eUpdates. Kansas State university. August 11th, 2022: Issue 919. https://eupdate.agronomy.ksu.edu/article_new/drought-and-heat-stress-in-kansas-corn-fields-507-3
+2.  Ciampitti, I.A., **Correndo, A.A.**, Sittel, M., Redmond, C. 2022. Drought and heat stress in Kansas soybean fields. Agronomy eUpdates. Kansas State university. August 18th, 2022: Issue 920. <https://eupdate.agronomy.ksu.edu/article_new/drought-and-heat-stress-in-kansas-soybean-fields-508-1>
 
-3.  Redmond, C., Ciampitti, I.A., **Correndo, A.A.**. 2022. Critical timing in Kansas: High temperatures and corn development. Kansas State university. July 28th, 2022: Issue 917. https://eupdate.agronomy.ksu.edu/article_new/critical-timing-in-kansas-high-temperatures-and-corn-development-505-4
+3.  Ciampitti, I.A., **Correndo, A.A.**. 2022. Drought and heat stress in Kansas corn fields. Agronomy eUpdates. Kansas State university. August 11th, 2022: Issue 919. <https://eupdate.agronomy.ksu.edu/article_new/drought-and-heat-stress-in-kansas-corn-fields-507-3>
 
-4.  Ciampitti, I.A., **Correndo, A.A.**. 2022. Estimating corn yield potential using the yield component method. Agronomy eUpdates. Kansas State university. July 21th, 2022: Issue 916. <https://eupdate.agronomy.ksu.edu/article_new/estimating-corn-yield-potential-using-the-yield-component-method-504-1>
+4.  Redmond, C., Ciampitti, I.A., **Correndo, A.A.**. 2022. Critical timing in Kansas: High temperatures and corn development. Kansas State university. July 28th, 2022: Issue 917. <https://eupdate.agronomy.ksu.edu/article_new/critical-timing-in-kansas-high-temperatures-and-corn-development-505-4>
 
-5.  Antunes de Almeida, L.F., **Correndo, A.A.**, Adee, E., Dooley, S., Ciampitti, I.A. 2022. Soybean seed yield productivity and biological nitrogen fixation in Kansas. *Kansas Field Research 8(4)*. K-State Research and Extension. Kansas State university. <https://doi.org/10.4148/2378-5977.8300>
+5.  Ciampitti, I.A., **Correndo, A.A.**. 2022. Estimating corn yield potential using the yield component method. Agronomy eUpdates. Kansas State university. July 21th, 2022: Issue 916. <https://eupdate.agronomy.ksu.edu/article_new/estimating-corn-yield-potential-using-the-yield-component-method-504-1>
 
-6.  **Correndo, A.A.**, Lanza Lopez, O., Antunes de Almeida, L.F., Ciampitti, I.A.. 2022. Yield response to nitrogen management in a corn-soybean sequence in North Central Kansas - 2021 Season. *Kansas Agricultural Experiment Station Research Reports.* Vol. 8(4). K-State Research and Extension. Kansas State University. <https://doi.org/10.4148/2378-5977.8315>
+6.  Antunes de Almeida, L.F., **Correndo, A.A.**, Adee, E., Dooley, S., Ciampitti, I.A. 2022. Soybean seed yield productivity and biological nitrogen fixation in Kansas. *Kansas Field Research 8(4)*. K-State Research and Extension. Kansas State university. <https://doi.org/10.4148/2378-5977.8300>
 
-7.  **Correndo, A.A.**, Antunes de Almeida, L.F., Adee, E., Ciampitti, I.A., 2022. Do late season soybean management impact seed yields in East Kansas? *Kansas Agricultural Experiment Station Research Reports* Vol. 8(4). K-State Research and Extension. Kansas State University. <https://doi.org/10.4148/2378-5977.8301>
+7.  **Correndo, A.A.**, Lanza Lopez, O., Antunes de Almeida, L.F., Ciampitti, I.A.. 2022. Yield response to nitrogen management in a corn-soybean sequence in North Central Kansas - 2021 Season. *Kansas Agricultural Experiment Station Research Reports.* Vol. 8(4). K-State Research and Extension. Kansas State University. <https://doi.org/10.4148/2378-5977.8315>
 
-8.  Ciampitti, I.A., **Correndo, A.A.**. 2022. Considerations for late planting (or replanted). Agronomy eUpdates. Kansas State university. June 9th, 2022: Issue 910. <https://bit.ly/3xYcfEx>
+8.  **Correndo, A.A.**, Antunes de Almeida, L.F., Adee, E., Ciampitti, I.A., 2022. Do late season soybean management impact seed yields in East Kansas? *Kansas Agricultural Experiment Station Research Reports* Vol. 8(4). K-State Research and Extension. Kansas State University. <https://doi.org/10.4148/2378-5977.8301>
 
-9.  Ciampitti, I.A., **Correndo, A.A.**. 2022. Soybean row spacing in Kansas. Agronomy eUpdates. Kansas State university. April 29th, 2022: Issue 904. <https://bit.ly/3y7eS7f>
+9.  Ciampitti, I.A., **Correndo, A.A.**. 2022. Considerations for late planting (or replanted). Agronomy eUpdates. Kansas State university. June 9th, 2022: Issue 910. <https://bit.ly/3xYcfEx>
 
-10. Ciampitti, I.A., **Correndo, A.A.**, & van Versendaal, E.. 2022. Soybean planting date and maturity group selection. Agronomy eUpdates. Kansas State university. April 14th, 2022: Issue 902. <https://bit.ly/3OemydJ>
+10. Ciampitti, I.A., **Correndo, A.A.**. 2022. Soybean row spacing in Kansas. Agronomy eUpdates. Kansas State university. April 29th, 2022: Issue 904. <https://bit.ly/3y7eS7f>
 
-11. Ciampitti, I.A., **Correndo, A.A.**, & Redmond, C.. 2022. 2022 soil moisture and temperature outlook of spring planting in Kansas. Agronomy eUpdates. Kansas State university. April 7th, 2022: Issue 901. <https://bit.ly/3xrLWXz>
+11. Ciampitti, I.A., **Correndo, A.A.**, & van Versendaal, E.. 2022. Soybean planting date and maturity group selection. Agronomy eUpdates. Kansas State university. April 14th, 2022: Issue 902. <https://bit.ly/3OemydJ>
 
-12. Ciampitti, I.A., & **Correndo, A.A.**. 2022. Optimal corn seeding rate recommendations. Agronomy eUpdates. Kansas State university. March 24th, 2022: Issue 898. <https://t.co/65BsXcYvf4>
+12. Ciampitti, I.A., **Correndo, A.A.**, & Redmond, C.. 2022. 2022 soil moisture and temperature outlook of spring planting in Kansas. Agronomy eUpdates. Kansas State university. April 7th, 2022: Issue 901. <https://bit.ly/3xrLWXz>
 
-13. Ciampitti, I.A., & **Correndo, A.A.**. 2021. Indigenous productivity of maize without nitrogen fertilization in North America. Kansas Research and Extension Reports. MF3572. <https://bookstore.ksre.ksu.edu/pubs/MF3572.pdf>
+13. Ciampitti, I.A., & **Correndo, A.A.**. 2022. Optimal corn seeding rate recommendations. Agronomy eUpdates. Kansas State university. March 24th, 2022: Issue 898. <https://t.co/65BsXcYvf4>
 
-14. **Correndo, A.A.**, & I.A. Ciampitti. 2021. Yield Response to Nitrogen Management in a Corn-Soybean Sequence in North Central Kansas. Kansas Agricultural Experiment Station Research Reports. Vol. 7(5). K-State Research and Extension. Kansas State University. https://doi.org/10.4148/2378-5977.8083
+14. Ciampitti, I.A., & **Correndo, A.A.**. 2021. Indigenous productivity of maize without nitrogen fertilization in North America. Kansas Research and Extension Reports. MF3572. <https://bookstore.ksre.ksu.edu/pubs/MF3572.pdf>
 
-15. **Correndo, A.A.**, & I.A. Ciampitti. 2020. Corn yield response to nitrogen in North Central Kansas. Kansas Agricultural Experiment Station Research Reports: Vol. 6(5). <https://doi.org/10.4148/2378-5977.7921>
+15. **Correndo, A.A.**, & I.A. Ciampitti. 2021. Yield Response to Nitrogen Management in a Corn-Soybean Sequence in North Central Kansas. Kansas Agricultural Experiment Station Research Reports. Vol. 7(5). K-State Research and Extension. Kansas State University. https://doi.org/10.4148/2378-5977.8083
 
-16. **Correndo, A.A.**, & I.A. Ciampitti. 2019. Pursuing the Best Management Strategies for Corn-Soybean Rotation Systems in North Central Kansas. Kansas Agricultural Experiment Station Research Reports: Vol. 5: Iss. 6. <https://doi.org/10.4148/2378-5977.7798>
+16. **Correndo, A.A.**, & I.A. Ciampitti. 2020. Corn yield response to nitrogen in North Central Kansas. Kansas Agricultural Experiment Station Research Reports: Vol. 6(5). <https://doi.org/10.4148/2378-5977.7921>
 
-17. Garcia, F.O., Grasso, A., Gonzalez Sanjuan, M.F., **Correndo, A.**, Salvagiotti, F.O., 2018. Connecting crop nutrient use efficiency to future soil productivity. Better Crops With Plant Food, Vol. CII (102), No. 4:8-10. <http://www.ipni.net/publication/bettercrops.nsf/issue/BC-2018-4>
+17. **Correndo, A.A.**, & I.A. Ciampitti. 2019. Pursuing the Best Management Strategies for Corn-Soybean Rotation Systems in North Central Kansas. Kansas Agricultural Experiment Station Research Reports: Vol. 5: Iss. 6. <https://doi.org/10.4148/2378-5977.7798>
 
-18. Ferreras, L., Magra, G., Saperdi, A., Toresani, S., Boxler, M., Gallo, S., Pozzi, R., **A. Correndo**, Garcia, F.O., 2018. Does balanced fertilization improve soil health? Better Crops With Plant Food, Vol. CII (102), No. 1:18-20. <http://www.ipni.net/publication/bettercrops.nsf/issue/BC-2018-1>
+18. Garcia, F.O., Grasso, A., Gonzalez Sanjuan, M.F., **Correndo, A.**, Salvagiotti, F.O., 2018. Connecting crop nutrient use efficiency to future soil productivity. Better Crops With Plant Food, Vol. CII (102), No. 4:8-10. <http://www.ipni.net/publication/bettercrops.nsf/issue/BC-2018-4>
 
-19. **Correndo, A.A.**, F. Permingeat, P. Gelso, S. Gallo, R. Pozzi, M. Salinas, N.I. Reussi Calvo, A. Berardo, & F.O. García. 2017. Long-term Crop Nutrition Network of CREA Southern Santa Fe. Results of 2016/17 Cropping Season: Maize. Available at: <http://research.ipni.net/page/RLAS-2571>
+19. Ferreras, L., Magra, G., Saperdi, A., Toresani, S., Boxler, M., Gallo, S., Pozzi, R., **A. Correndo**, Garcia, F.O., 2018. Does balanced fertilization improve soil health? Better Crops With Plant Food, Vol. CII (102), No. 1:18-20. <http://www.ipni.net/publication/bettercrops.nsf/issue/BC-2018-1>
 
-20. **Correndo, A.A.**, F. Permingeat, P. Gelso, S. Gallo, R. Pozzi, M. Salinas, N.I. Reussi Calvo, A. Berardo, & F.O. García. 2017. Long-term Crop Nutrition Network of CREA Southern Santa Fe. Results of 2016/17 Cropping Season: Soybean. Available at: <http://research.ipni.net/page/RLAS-2572>
+20. **Correndo, A.A.**, F. Permingeat, P. Gelso, S. Gallo, R. Pozzi, M. Salinas, N.I. Reussi Calvo, A. Berardo, & F.O. García. 2017. Long-term Crop Nutrition Network of CREA Southern Santa Fe. Results of 2016/17 Cropping Season: Maize. Available at: <http://research.ipni.net/page/RLAS-2571>
 
-21. Boxler, M., F.O. García, **A.A. Correndo**, S. Gallo, R. Pozzi, M. Uranga, M. Salinas, N.I. Reussi Calvo & A. Berardo. 2017. Long-term Crop Nutrition Network of CREA Southern Santa Fe. Results of 2015/16 Cropping Season: Soybean. Available at: <http://research.ipni.net/page/RLAS-2564>
+21. **Correndo, A.A.**, F. Permingeat, P. Gelso, S. Gallo, R. Pozzi, M. Salinas, N.I. Reussi Calvo, A. Berardo, & F.O. García. 2017. Long-term Crop Nutrition Network of CREA Southern Santa Fe. Results of 2016/17 Cropping Season: Soybean. Available at: <http://research.ipni.net/page/RLAS-2572>
+
+22. Boxler, M., F.O. García, **A.A. Correndo**, S. Gallo, R. Pozzi, M. Uranga, M. Salinas, N.I. Reussi Calvo & A. Berardo. 2017. Long-term Crop Nutrition Network of CREA Southern Santa Fe. Results of 2015/16 Cropping Season: Soybean. Available at: <http://research.ipni.net/page/RLAS-2564>
 
 # 📓Book Chapters
 
