--- a/04-digitalops.qmd
+++ b/04-digitalops.qmd
@@ -10,23 +10,27 @@ Let's take a quick look to the latest updates on my digital tools projects.
 
 Open-access software promoting the reproducibility of data processing and analysis
 
-[![](assets/images/soiltestcorr_logo.png){width="100" height="110"}](https://adriancorrendo.github.io/soiltestcorr/) [![](assets/images/metrica_logo.png){width="100" height="110"}](https://adriancorrendo.github.io/metrica/) [![](assets/images/xpolaris.png){width="100" height="110"}](https://github.com/cran/XPolaris)
+[![](assets/images/metrica_logo.png){width="100" height="110"}](https://adriancorrendo.github.io/metrica/)[![](assets/images/soiltestcorr_logo.png){width="100" height="110"}](https://adriancorrendo.github.io/soiltestcorr/)[![](assets/images/xpolaris.png){width="100" height="110"}](https://github.com/cran/XPolaris)
 
 ## Shinyapps ![](assets/images/shiny.png){width="33"}
 
 Web interfaces designed to facilitate the implementation of my packages, and to translate my research into decision-support tools.
 
-+---------------------------------------------------------------------+-----------------------------------------------------------------------------------------------+
-| #### [soiltestcorr app](https://soiltestcorr.herokuapp.com/)        | #### [metrica app](https://acorrendo.shinyapps.io/shiny_metrica/)                             |
-|                                                                     |                                                                                               |
-| ![](assets/images/shiny_soiltestcorr.png){width="300" height="200"} | ![](assets/images/shiny_metrica.png){width="300" height="200"}                                |
-+=====================================================================+===============================================================================================+
-| #### [corny0N app](https://corn-y0-forecast.herokuapp.com/)         | #### [soybean-VRS simulator](https://analytics.iasoybeans.com/cool-apps/SoybeanVRSsimulator/) |
-|                                                                     |                                                                                               |
-| ![](assets/images/shiny_corny0.png){width="300" height="200"}       | ![](images/paste-3651008B.png){width="301" height="201"}                                      |
-|                                                                     |                                                                                               |
-| ###                                                                 |                                                                                               |
-+---------------------------------------------------------------------+-----------------------------------------------------------------------------------------------+
++-----------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------+
+| #### [Soiltestcorr](https://ciampittilab.shinyapps.io/soiltestcorr/)                                            | #### [Metrica](https://ciampittilab.shinyapps.io/metrica/)     |
+|                                                                                                                 |                                                                |
+| ![](assets/images/shiny_soiltestcorr.png){width="300" height="200"}                                             | ![](assets/images/shiny_metrica.png){width="300" height="200"} |
++=================================================================================================================+================================================================+
+| #### [Cornyield0N](https://ciampittilab.shinyapps.io/cornyield0N/)                                              | #### [DONMaiz](https://ciampittilab.shinyapps.io/DONMaiz/)     |
+|                                                                                                                 |                                                                |
+| ![](images/paste-39B54D97.png){width="364"}                                                                     | ![](images/paste-2E73617F.png){width="363"}                    |
+|                                                                                                                 |                                                                |
+| ###                                                                                                             |                                                                |
++-----------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------+
+| #### [Soybean Variable Seeding Rate Simulator](https://analytics.iasoybeans.com/cool-apps/SoybeanVRSsimulator/) |                                                                |
+|                                                                                                                 |                                                                |
+| ![](images/paste-2BEEBBAE.png)                                                                                  |                                                                |
++-----------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------+
 
 ## [Harvard Dataverse](https://dataverse.harvard.edu/dataverse/adriancorrendo) ![](assets/images/harvard_dataverse_logo.png){width="72" height="28"}
 
@@ -38,6 +42,14 @@ Data and codes publicly available
 
 Recordings sharing codes designed for gathering data from digitalized weather databases and data analysis using R
 
-| [Agro-meteorological data using R software](https://www.youtube.com/watch?v=gJo5XUFtDPk) | [Regression Tress and Random Forests](https://www.youtube.com/watch?v=sE8VyX2XGII) |
-|------------------------------------------------------------------------------------------|------------------------------------------------------------------------------------|
-| ![](assets/images/agrometR_tutorial.png){width="300" height="200"}                       | ![](assets/images/rf_tutorial.png){width="300" height="200"}                       |
+::: {align="center"}
+<iframe width="560" height="315" src="https://www.youtube.com/embed/gJo5XUFtDPk" frameborder="0" allowfullscreen>
+
+</iframe>
+:::
+
+::: {align="center"}
+<iframe width="560" height="315" src="https://www.youtube.com/embed/sE8VyX2XGII" frameborder="0" allowfullscreen>
+
+</iframe>
+:::
