--- a/04-digitalops.qmd
+++ b/04-digitalops.qmd
@@ -42,6 +42,9 @@ Data and codes publicly available
 
 Recordings sharing codes designed for gathering data from digitalized weather databases and data analysis using R
 
+::: {#tidymixedmodels align =" \"center"}
+:::
+
 ::: {align="center"}
 <iframe width="560" height="315" src="https://www.youtube.com/embed/gJo5XUFtDPk" frameborder="0" allowfullscreen>
 
