--- a/05-contact.qmd
+++ b/05-contact.qmd
@@ -2,7 +2,7 @@
 title: "Contact me"
 ---
 
-{{< fa envelope >}} correndo@ksu.edu
+{{< fa envelope >}} correndo\@ksu.edu
 
 {{< fa map-pin >}} 2014E Throckmorton PSC, 1712 Claflin Rd., Manhattan, KS-66506, USA.
 
@@ -18,18 +18,18 @@ title: "Contact me"
 
 [GitHub](https://github.com/adriancorrendo)
 
-{{< ai orcid >}} 
+{{< ai orcid >}}
 
 [ORCID](https://orcid.org/0000-0002-4172-289X)
 
-{{< ai google-scholar >}} 
+{{< ai google-scholar >}}
 
 [GoogleScholar](https://scholar.google.com/citations?user=4h88EXkAAAAJ&hl=en)
 
-{{< ai researchgate >}} 
+{{< ai researchgate >}}
 
 [ResearchGate](https://www.researchgate.net/profile/Adrian-Correndo)
 
-{{< fa database >}} 
+{{< fa database >}}
 
 [HarvardDataverse](https://dataverse.harvard.edu/dataverse/adriancorrendo)
