--- a/01-index.qmd
+++ b/01-index.qmd
@@ -8,17 +8,20 @@ format:
 
 # 🙋🏻 Bio
 
-::: {layout-ncol="2"}
-| Hi, there! My name is Adrian Correndo. I was born and raised in Buenos Aires, Argentina. I live with my wife (Milagros) and our little girl (Amelie) in Manhattan, Kansas, USA, where I got my Ph.D. in Agronomy in 2021.
-| 
-| Currently, I am a Postdoctoral Fellow at Kansas State Univeristy collaborating on various research projects and outreach activities, with special focus on digital support tools for corn and soybean crops.
-| 
-| My mission is to substantially contribute to the development and transfer of science for sustainable farming systems.
-| 
-| Teamwork is my favorite word, an essential part of my professional and personal philosophy. I work to inspire and support the future leaders of agriculture.
-| 
+::: columns
+::: {.column width="65%"}
+Hi, there! My name is Adrian Correndo. I was born and raised in Buenos Aires, Argentina. I live with my wife (Milagros) and our little girl (Amelie) in Manhattan, Kansas, USA, where I got my Ph.D. in Agronomy in 2021.
 
+Currently, I am a Postdoctoral Fellow at Kansas State Univeristy collaborating on various research projects and outreach activities, with special focus on digital support tools for corn and soybean crops.
+
+My mission is to substantially contribute to the development and transfer of science for sustainable farming systems.
+
+Teamwork is my favorite word, an essential part of my professional and personal philosophy. I work to inspire and support the future leaders of agriculture.
+:::
+
+::: {.column width="35%"}
 ![](images/Adrian%20Correndo-KSU.jpg){fig-align="center" width="295"}
+:::
 :::
 
 ## 👷🏻What do I do?
@@ -29,7 +32,7 @@ On my [Career](https://adriancorrendo.github.io/02-career.html) section you will
 
 My [Publications](https://adriancorrendo.github.io/03-publications.html) section provides a summary the diverse type of literature material I have produced during my career.
 
-If you're interested in my digital developments, my [DigitalOps](https://adriancorrendo.github.io/04-digitalops.html) section includes links to my R-packages ( [*soiltestcorr*](https://adriancorrendo.github.io/soiltestcorr/), [*metrica*](https://adriancorrendo.github.io/metrica/)*, [XPolaris](https://cran.r-project.org/package=XPolaris)*), Shinyapps (user-friendly interfaces), digital repositories, and tutorials.
+If you're interested in my digital developments, my [Digital Resources](https://adriancorrendo.github.io/03-digitalops.html) section includes links to my R-packages ( [*soiltestcorr*](https://adriancorrendo.github.io/soiltestcorr/), [*metrica*](https://adriancorrendo.github.io/metrica/)*, [XPolaris](https://cran.r-project.org/package=XPolaris)*), Shinyapps (user-friendly interfaces), digital repositories, and YouTube tutorials.
 
 ## 📂 CV
 
