--- a/03-publications.qmd
+++ b/03-publications.qmd
@@ -9,135 +9,162 @@ format:
 ::: panel-tabset
 # 📑Refereed
 
-1.  **Correndo, A.A.**, Moro Rosso, L.H., Hernandez, C.H., Bastos, L.M., Nieto, L., Holzworth, D., Ciampitti, I.A., 2022. *Under review at Journal of Open Access Software*. **Pre-print** available at: [https://github.com/openjournals/joss-papers/blob/joss.04655](https://github.com/openjournals/joss-papers/blob/joss.04655/joss.04655/10.21105.joss.04655.pdf)
+1.  Antunes de Almeida, L.F., **Correndo, A.A.**, Ciampitti. I.A., et al., 2023. Soybean yield response to nitrogen and sulfur fertilization in the United States: contribution of soil N and N fixation processes. *Eur. J. Agron.* 145, 126791. <https://doi.org/10.1016/j.eja.2023.126791>
 
-2.  **Correndo, A.A.**, Pearce, A.W., Bolster, C.H., Spargo, J.T., Osmond, D., Ciampitti, I.A., 2022. The Soiltestcorr R Package: An Accessible Framework for Reproducible Correlation Analysis of Crop Yield and Soil Test Data. *Under review at Software X*. **Pre-print** available at SSRN: <https://ssrn.com/abstract=4169750> or [http://dx.doi.org/10.2139/ssrn.4169750](https://dx.doi.org/10.2139/ssrn.4169750)
+2. Carcedo, A.J., Viera N., Marziotte, L., **Correndo, A.A.**, Alemo, A., Vara Prasad, P.V., Min, D., Stewart, Z.P., Faye, A., and Ciampitti, I.A., 2023. The urgency for investment on local data for advancing options for improving crop productivity and climate resilience assessments in Africa: a review for APSIM crop modeling. *Env. Modell. Soft* 161, 105633. <https://doi.org/10.1016/j.envsoft.2023.105633>
 
-3.  Secchi, M.A., **Correndo, A.A.**, Stamm, M., Durrett , T., Vara Prasad, P.V., Messina, C., and Ciampitti , I.A., 202#. Suitability of different environments for winter canola oil production in the United States of America. *Field Crops Res*. 287, 108658. <https://doi.org/10.1016/j.fcr.2022.108658>
+3. Moro Rosso, L.H., de Borja Reis, A.F., Tamagno, S., **Correndo, A.A.**, Vara Prasad, P.V., Ciampitti. I.A., 2023. Temporal variation of soil N supply defines N fixation in soybeans. *Eur. J. Agron* 144, 126745. <https://doi.org/10.1016/j.eja.2023.126745>
 
-4.  **Correndo, A.A.**, McArtor, B., Prestholt, A., Hernandez, C., Kyveryga, P., and Ciampitti , I.A., 2022. Interactive Soybean Variable-Rate Seeding Simulator for Farmers. *Agron. J. In-press.* <https://doi.org/10.1002/agj2.21181>
+4. **Correndo, A.A.**, Pearce, A., Bolster, C., Spargo, J., Osmond, D., and Ciampitti, I.A., 2023. The soiltestcorr R package: An accessible framework for reproducible correlation analysis of crop yield and soil test data. Submitted to *SoftwareX* 21, 101275,  [https://doi.org/10.1016/j.softx.2022.101275](https://doi.org/10.1016/j.softx.2022.101275)
 
-5.  Sadras, V.O., Giordano, N., **Correndo, A.A.**, Cossani, M., Ferreyra, J.M., Caviglia, O.P., Coulter, J.A., Ciampitti , I.A., and Lollato,R.A., 2022. Temperature-driven developmental modulation of yield response to nitrogen in wheat and maize. *Frontiers in Agronomy.* <https://doi.org/10.3389/fagro.2022.903340>
+5. Bolster, C., **Correndo, A.A.**, Pearce, A., Spargo, J., Osmond, D., and Slaton, N., 2023. A spreadsheet for determining critical soil test values using the modified arcsine-log calibration curve. Submitted to *Soil Sci. Soc. Am. J.* 87, 182-189, <https://doi.org/10.1002/saj2.20498>
 
-6.  **Correndo, A.A.**, Adee, E., Moro Rosso, L.H., Tremblay, N., Vara Prasad, P.V., Du, J., and Ciampitti, I.A., 2022. Footprints of corn nitrogen management on the following soybean crop. *Agron. J.* 1-14. <https://doi.org/10.1002/agj2.21023>
+6. **Correndo, A.A.**, Moro Rosso, L.H., Hernandez, C.H., Bastos, L.M., Nieto, L., Holzworth, D., Ciampitti, I.A., 2022. metrica: an R package to evaluate prediction performance of regression and classification point-forecast models. Journal of Open Source Software, 7(79), 4655, [https://joss.theoj.org/papers/10.21105/joss.04655](https://joss.theoj.org/papers/10.21105/joss.04655)
 
-7.  **Correndo, A.A.**, Tremblay, N., ...Ciampitti, I.A. et al., 2021. Unraveling uncertainty drivers of the maize yield response to nitrogen: A Bayesian and machine learning approach. *Agr. For. Meteorol.* 311, 108668. <https://doi.org/10.1016/j.agrformet.2021.108668>
+7. Secchi, M.A., **Correndo, A.A.**, Stamm, M., Durrett , T., Vara Prasad, P.V., Messina, C., and Ciampitti , I.A., 202#. Suitability of different environments for winter canola oil production in the United States of America. *Field Crops Res*. 287, 108658. <https://doi.org/10.1016/j.fcr.2022.108658>
 
-8.  **Correndo, A.A.**, Gutierrez-Boem, F.H., Garcia, F.O.,... Salvagiotti, F., 2021. Attainable yield and soil texture as drivers of maize response to nitrogen: a synthesis analysis for Argentina. *Field Crops Res.* 273, 108299. <https://doi.org/10.1016/j.fcr.2021.108299>
+8. **Correndo, A.A.**, McArtor, B., Prestholt, A., Hernandez, C., Kyveryga, P., and Ciampitti , I.A., 2022. Interactive Soybean Variable-Rate Seeding Simulator for Farmers. *Agron. J.* 114, 3554-3565, <https://doi.org/10.1002/agj2.21181>
 
-9.  **Correndo, A.A.**, Fernandez, J., Prasad, V., Ciampitti, I.A., 2021. Do water and nitrogen management practices impact grain quality in maize? *Agronomy* 11(9), 1851. <https://doi.org/10.3390/agronomy11091851>
+9.  Sadras, V.O., Giordano, N., **Correndo, A.A.**, Cossani, M., Ferreyra, J.M., Caviglia, O.P., Coulter, J.A., Ciampitti , I.A., and Lollato,R.A., 2022. Temperature-driven developmental modulation of yield response to nitrogen in wheat and maize. *Frontiers in Agronomy.* <https://doi.org/10.3389/fagro.2022.903340>
 
-10. Ciampitti, I.A., de Borja Reis, A.F., Cordova, C., Castellano, M.J., Archontoulis, S., **Correndo, A.A.**, Antunes de Almeida, L.F., Moro Rosso, L.H.,, 202X. Revisiting biological nitrogen fixation dynamics in soybeans. *Front. Plant Sci.* 12, 727021. <https://doi.org/10.3389/fpls.2021.727021>
+10.  **Correndo, A.A.**, Adee, E., Moro Rosso, L.H., Tremblay, N., Vara Prasad, P.V., Du, J., and Ciampitti, I.A., 2022. Footprints of corn nitrogen management on the following soybean crop. *Agron. J.* 1-14. <https://doi.org/10.1002/agj2.21023>
 
-11. Moro Rosso, L.H., de Borja Reis, A.F., **Correndo, A.A.**, Ciampitti, I.A., 2021. XPolaris: an R-package to retrieve United States soil data at 30-meter resolution. *BMC Res Notes* 14, 327. <https://doi.org/10.1186/s13104-021-05729-y>
+11.  **Correndo, A.A.**, Tremblay, N., ...Ciampitti, I.A. et al., 2021. Unraveling uncertainty drivers of the maize yield response to nitrogen: A Bayesian and machine learning approach. *Agr. For. Meteorol.* 311, 108668. <https://doi.org/10.1016/j.agrformet.2021.108668>
 
-12. **Correndo, A.A.**, Hefley, T., Holzworth, D., Ciampitti, I.A., 2021. Revisiting linear regression to test agreement in continuous predicted-observed datasets. *Agr. Syst.* 192, 103194. <https://doi.org/10.1016/j.agsy.2021.103194>
+12.  **Correndo, A.A.**, Gutierrez-Boem, F.H., Garcia, F.O.,... Salvagiotti, F., 2021. Attainable yield and soil texture as drivers of maize response to nitrogen: a synthesis analysis for Argentina. *Field Crops Res.* 273, 108299. <https://doi.org/10.1016/j.fcr.2021.108299>
 
-13. **Correndo, A.A.**, Moro Rosso, L.H., Ciampitti, I.A., 2021. Retrieving and processing agro-meteorological from API-client sources using R software. *BMC Res. Notes* 14, 205. <https://doi.org/10.1186/s13104-021-05622-8>
+13.  **Correndo, A.A.**, Fernandez, J., Prasad, V., Ciampitti, I.A., 2021. Do water and nitrogen management practices impact grain quality in maize? *Agronomy* 11(9), 1851. <https://doi.org/10.3390/agronomy11091851>
 
-14. **Correndo, A.A.**, Rubio, G., Garcia, F.O., Ciampitti, I.A., 2021. Subsoil-potassium depletion accounts for the nutrient budget in high-potassium agricultural soils. *Sci. Rep.* 11, 11597. <https://doi.org/10.1038/s41598-021-90297-1>
+14. Ciampitti, I.A., de Borja Reis, A.F., Cordova, C., Castellano, M.J., Archontoulis, S., **Correndo, A.A.**, Antunes de Almeida, L.F., Moro Rosso, L.H.,, 202X. Revisiting biological nitrogen fixation dynamics in soybeans. *Front. Plant Sci.* 12, 727021. <https://doi.org/10.3389/fpls.2021.727021>
 
-15. **Correndo, A.A.**, Rotundo, J.L., Tremblay, N., et al., 2021. Assessing the uncertainty of maize yield with no nitrogen fertilization. *Field Crops Res.* 260, 107985. <https://doi.org/10.1016/j.fcr.2020.107985>
+15. Moro Rosso, L.H., de Borja Reis, A.F., **Correndo, A.A.**, Ciampitti, I.A., 2021. XPolaris: an R-package to retrieve United States soil data at 30-meter resolution. *BMC Res Notes* 14, 327. <https://doi.org/10.1186/s13104-021-05729-y>
 
-16. Appelhans, S.C., Carciochi, W.D., **Correndo, A.A.**, et al. 2021. Predicting soil test phosphorus decrease in non‐P‐fertilized conditions. *Eur. J. Soil Sci.* 2021; 1-- 11. <https://doi.org/10.1111/ejss.12946>
+16. **Correndo, A.A.**, Hefley, T., Holzworth, D., Ciampitti, I.A., 2021. Revisiting linear regression to test agreement in continuous predicted-observed datasets. *Agr. Syst.* 192, 103194. <https://doi.org/10.1016/j.agsy.2021.103194>
 
-17. **Correndo, A.A.**, Salvagiotti, F., García, F.O., Gutiérrez Boem, F.H., 2017. A modification of the arcsine-log calibration curve for analysing soil test value-relative yield relationships. *Crop and Pasture Science* 68 (3): 297-304. <https://doi.org/10.1071/CP16444>
+17. **Correndo, A.A.**, Moro Rosso, L.H., Ciampitti, I.A., 2021. Retrieving and processing agro-meteorological from API-client sources using R software. *BMC Res. Notes* 14, 205. <https://doi.org/10.1186/s13104-021-05622-8>
 
-18. Barbieri, P.A., Sainz Rozas, H.R. Wyngaard, N., Eyherabide, M., Reussi Calvo, N.I., Salvagotti, F., **Correndo, A.A.**, et al., 2017. Can Edaphic Variables Improve DTPA-Based Zinc Diagnosis in Corn?. *Soil Sci. Soc. Am. J.* 81, 556-563. <https://doi.org/10.2136/sssaj2016.09.0316>
+18. **Correndo, A.A.**, Rubio, G., Garcia, F.O., Ciampitti, I.A., 2021. Subsoil-potassium depletion accounts for the nutrient budget in high-potassium agricultural soils. *Sci. Rep.* 11, 11597. <https://doi.org/10.1038/s41598-021-90297-1>
 
-19. **Correndo, A.A.**, Boxler, M., García, F.O., 2015. Economic analysis of fertilization management with focus on the long term. *Ci. Suelo* 33(2), 197-212. <http://www.suelos.org.ar/publicaciones/vol_33n2/v33n2a04.pdf>
+19. **Correndo, A.A.**, Rotundo, J.L., Tremblay, N., et al., 2021. Assessing the uncertainty of maize yield with no nitrogen fertilization. *Field Crops Res.* 260, 107985. <https://doi.org/10.1016/j.fcr.2020.107985>
+
+20. Appelhans, S.C., Carciochi, W.D., **Correndo, A.A.**, et al. 2021. Predicting soil test phosphorus decrease in non‐P‐fertilized conditions. *Eur. J. Soil Sci.* 2021; 1-- 11. <https://doi.org/10.1111/ejss.12946>
+
+21. **Correndo, A.A.**, Salvagiotti, F., García, F.O., Gutiérrez Boem, F.H., 2017. A modification of the arcsine-log calibration curve for analysing soil test value-relative yield relationships. *Crop and Pasture Science* 68 (3): 297-304. <https://doi.org/10.1071/CP16444>
+
+22. Barbieri, P.A., Sainz Rozas, H.R. Wyngaard, N., Eyherabide, M., Reussi Calvo, N.I., Salvagotti, F., **Correndo, A.A.**, et al., 2017. Can Edaphic Variables Improve DTPA-Based Zinc Diagnosis in Corn?. *Soil Sci. Soc. Am. J.* 81, 556-563. <https://doi.org/10.2136/sssaj2016.09.0316>
+
+23. **Correndo, A.A.**, Boxler, M., García, F.O., 2015. Economic analysis of fertilization management with focus on the long term. *Ci. Suelo* 33(2), 197-212. <http://www.suelos.org.ar/publicaciones/vol_33n2/v33n2a04.pdf>
 
 # 🎙️Extension
 
-### Total (49)
+### Total (52)
 
-### Most recent (20)
+### Most recent (25)
 
-1.  Ciampitti, I.A., **Correndo, A.A.**, Sittel, M., Redmond, C. 2022. Drought and heat stress in Kansas soybean fields. Agronomy eUpdates. Kansas State university. August 25th, 2022: Issue 921. <https://eupdate.agronomy.ksu.edu/article_new/soybean-yield-potential-estimation-509-4>
+1. Ciampitti, I.A., **Correndo, A.A.**, Sittel, M., Redmond, C. 2022. Spring planting is approaching: Soil temperature and moisture status. March 16th, 2023: Issue 947. [LINK](https://eupdate.agronomy.ksu.edu/article_new/spring-planting-is-approaching-soil-temperature-and-moisture-status-535-2)
 
-2.  Ciampitti, I.A., **Correndo, A.A.**, Sittel, M., Redmond, C. 2022. Drought and heat stress in Kansas soybean fields. Agronomy eUpdates. Kansas State university. August 18th, 2022: Issue 920. <https://eupdate.agronomy.ksu.edu/article_new/drought-and-heat-stress-in-kansas-soybean-fields-508-1>
+2. Ciampitti, I.A., **Correndo, A.A.**. 2022. Optimal corn seeding rate recommendations. March 23rd, 2023: Issue 948. [LINK](https://eupdate.agronomy.ksu.edu/article_new/optimal-corn-seeding-rate-recommendations-536-2)
 
-3.  Ciampitti, I.A., **Correndo, A.A.**. 2022. Drought and heat stress in Kansas corn fields. Agronomy eUpdates. Kansas State university. August 11th, 2022: Issue 919. <https://eupdate.agronomy.ksu.edu/article_new/drought-and-heat-stress-in-kansas-corn-fields-507-3>
+3. Melchiori, R.J.M., Maltese, N., **Correndo, A.A.**, Novelli, L., & Caviglia, O. 2022.  How to decide nitrogen fertilization in maize under uncertain scenarios.  Serie de Extension INTA EEA Parana No. 89: 76-82. ISSN 0325 - 8874. Entre Rios, Argentina. [LINK](https://inta.gob.ar/sites/default/files/fertilizacion_maiz_diferentes_escenarios_.pdf)
 
-4.  Redmond, C., Ciampitti, I.A., **Correndo, A.A.**. 2022. Critical timing in Kansas: High temperatures and corn development. Kansas State university. July 28th, 2022: Issue 917. <https://eupdate.agronomy.ksu.edu/article_new/critical-timing-in-kansas-high-temperatures-and-corn-development-505-4>
+4.  Ciampitti, I.A., **Correndo, A.A.**, Sittel, M., Redmond, C. 2022. Drought and heat stress in Kansas soybean fields. Agronomy eUpdates. Kansas State university. August 25th, 2022: Issue 921. <https://eupdate.agronomy.ksu.edu/article_new/soybean-yield-potential-estimation-509-4>
 
-5.  Ciampitti, I.A., **Correndo, A.A.**. 2022. Estimating corn yield potential using the yield component method. Agronomy eUpdates. Kansas State university. July 21th, 2022: Issue 916. <https://eupdate.agronomy.ksu.edu/article_new/estimating-corn-yield-potential-using-the-yield-component-method-504-1>
+5.  Ciampitti, I.A., **Correndo, A.A.**, Sittel, M., Redmond, C. 2022. Drought and heat stress in Kansas soybean fields. Agronomy eUpdates. Kansas State university. August 18th, 2022: Issue 920. <https://eupdate.agronomy.ksu.edu/article_new/drought-and-heat-stress-in-kansas-soybean-fields-508-1>
 
-6.  Antunes de Almeida, L.F., **Correndo, A.A.**, Adee, E., Dooley, S., Ciampitti, I.A. 2022. Soybean seed yield productivity and biological nitrogen fixation in Kansas. *Kansas Field Research 8(4)*. K-State Research and Extension. Kansas State university. <https://doi.org/10.4148/2378-5977.8300>
+6.  Ciampitti, I.A., **Correndo, A.A.**. 2022. Drought and heat stress in Kansas corn fields. Agronomy eUpdates. Kansas State university. August 11th, 2022: Issue 919. <https://eupdate.agronomy.ksu.edu/article_new/drought-and-heat-stress-in-kansas-corn-fields-507-3>
 
-7.  **Correndo, A.A.**, Lanza Lopez, O., Antunes de Almeida, L.F., Ciampitti, I.A.. 2022. Yield response to nitrogen management in a corn-soybean sequence in North Central Kansas - 2021 Season. *Kansas Agricultural Experiment Station Research Reports.* Vol. 8(4). K-State Research and Extension. Kansas State University. <https://doi.org/10.4148/2378-5977.8315>
+7.  Redmond, C., Ciampitti, I.A., **Correndo, A.A.**. 2022. Critical timing in Kansas: High temperatures and corn development. Kansas State university. July 28th, 2022: Issue 917. <https://eupdate.agronomy.ksu.edu/article_new/critical-timing-in-kansas-high-temperatures-and-corn-development-505-4>
 
-8.  **Correndo, A.A.**, Antunes de Almeida, L.F., Adee, E., Ciampitti, I.A., 2022. Do late season soybean management impact seed yields in East Kansas? *Kansas Agricultural Experiment Station Research Reports* Vol. 8(4). K-State Research and Extension. Kansas State University. <https://doi.org/10.4148/2378-5977.8301>
+8.  Ciampitti, I.A., **Correndo, A.A.**. 2022. Estimating corn yield potential using the yield component method. Agronomy eUpdates. Kansas State university. July 21th, 2022: Issue 916. <https://eupdate.agronomy.ksu.edu/article_new/estimating-corn-yield-potential-using-the-yield-component-method-504-1>
 
-9.  Ciampitti, I.A., **Correndo, A.A.**. 2022. Considerations for late planting (or replanted). Agronomy eUpdates. Kansas State university. June 9th, 2022: Issue 910. <https://bit.ly/3xYcfEx>
+9.  Antunes de Almeida, L.F., **Correndo, A.A.**, Adee, E., Dooley, S., Ciampitti, I.A. 2022. Soybean seed yield productivity and biological nitrogen fixation in Kansas. *Kansas Field Research 8(4)*. K-State Research and Extension. Kansas State university. <https://doi.org/10.4148/2378-5977.8300>
 
-10. Ciampitti, I.A., **Correndo, A.A.**. 2022. Soybean row spacing in Kansas. Agronomy eUpdates. Kansas State university. April 29th, 2022: Issue 904. <https://bit.ly/3y7eS7f>
+10.  **Correndo, A.A.**, Lanza Lopez, O., Antunes de Almeida, L.F., Ciampitti, I.A.. 2022. Yield response to nitrogen management in a corn-soybean sequence in North Central Kansas - 2021 Season. *Kansas Agricultural Experiment Station Research Reports.* Vol. 8(4). K-State Research and Extension. Kansas State University. <https://doi.org/10.4148/2378-5977.8315>
 
-11. Ciampitti, I.A., **Correndo, A.A.**, & van Versendaal, E.. 2022. Soybean planting date and maturity group selection. Agronomy eUpdates. Kansas State university. April 14th, 2022: Issue 902. <https://bit.ly/3OemydJ>
+11.  **Correndo, A.A.**, Antunes de Almeida, L.F., Adee, E., Ciampitti, I.A., 2022. Do late season soybean management impact seed yields in East Kansas? *Kansas Agricultural Experiment Station Research Reports* Vol. 8(4). K-State Research and Extension. Kansas State University. <https://doi.org/10.4148/2378-5977.8301>
 
-12. Ciampitti, I.A., **Correndo, A.A.**, & Redmond, C.. 2022. 2022 soil moisture and temperature outlook of spring planting in Kansas. Agronomy eUpdates. Kansas State university. April 7th, 2022: Issue 901. <https://bit.ly/3xrLWXz>
+12.  Ciampitti, I.A., **Correndo, A.A.**. 2022. Considerations for late planting (or replanted). Agronomy eUpdates. Kansas State university. June 9th, 2022: Issue 910. <https://bit.ly/3xYcfEx>
 
-13. Ciampitti, I.A., & **Correndo, A.A.**. 2022. Optimal corn seeding rate recommendations. Agronomy eUpdates. Kansas State university. March 24th, 2022: Issue 898. <https://t.co/65BsXcYvf4>
+13. Ciampitti, I.A., **Correndo, A.A.**. 2022. Soybean row spacing in Kansas. Agronomy eUpdates. Kansas State university. April 29th, 2022: Issue 904. <https://bit.ly/3y7eS7f>
 
-14. Ciampitti, I.A., & **Correndo, A.A.**. 2021. Indigenous productivity of maize without nitrogen fertilization in North America. Kansas Research and Extension Reports. MF3572. <https://bookstore.ksre.ksu.edu/pubs/MF3572.pdf>
+14. Ciampitti, I.A., **Correndo, A.A.**, & van Versendaal, E.. 2022. Soybean planting date and maturity group selection. Agronomy eUpdates. Kansas State university. April 14th, 2022: Issue 902. <https://bit.ly/3OemydJ>
 
-15. **Correndo, A.A.**, & I.A. Ciampitti. 2021. Yield Response to Nitrogen Management in a Corn-Soybean Sequence in North Central Kansas. Kansas Agricultural Experiment Station Research Reports. Vol. 7(5). K-State Research and Extension. Kansas State University. https://doi.org/10.4148/2378-5977.8083
+15. Ciampitti, I.A., **Correndo, A.A.**, & Redmond, C.. 2022. 2022 soil moisture and temperature outlook of spring planting in Kansas. Agronomy eUpdates. Kansas State university. April 7th, 2022: Issue 901. <https://bit.ly/3xrLWXz>
 
-16. **Correndo, A.A.**, & I.A. Ciampitti. 2020. Corn yield response to nitrogen in North Central Kansas. Kansas Agricultural Experiment Station Research Reports: Vol. 6(5). <https://doi.org/10.4148/2378-5977.7921>
+16. Ciampitti, I.A., & **Correndo, A.A.**. 2022. Optimal corn seeding rate recommendations. Agronomy eUpdates. Kansas State university. March 24th, 2022: Issue 898. <https://t.co/65BsXcYvf4>
 
-17. **Correndo, A.A.**, & I.A. Ciampitti. 2019. Pursuing the Best Management Strategies for Corn-Soybean Rotation Systems in North Central Kansas. Kansas Agricultural Experiment Station Research Reports: Vol. 5: Iss. 6. <https://doi.org/10.4148/2378-5977.7798>
+17. Ciampitti, I.A., & **Correndo, A.A.**. 2021. Indigenous productivity of maize without nitrogen fertilization in North America. Kansas Research and Extension Reports. MF3572. <https://bookstore.ksre.ksu.edu/pubs/MF3572.pdf>
 
-18. Garcia, F.O., Grasso, A., Gonzalez Sanjuan, M.F., **Correndo, A.**, Salvagiotti, F.O., 2018. Connecting crop nutrient use efficiency to future soil productivity. Better Crops With Plant Food, Vol. CII (102), No. 4:8-10. <http://www.ipni.net/publication/bettercrops.nsf/issue/BC-2018-4>
+18. **Correndo, A.A.**, & I.A. Ciampitti. 2021. Yield Response to Nitrogen Management in a Corn-Soybean Sequence in North Central Kansas. Kansas Agricultural Experiment Station Research Reports. Vol. 7(5). K-State Research and Extension. Kansas State University. https://doi.org/10.4148/2378-5977.8083
 
-19. Ferreras, L., Magra, G., Saperdi, A., Toresani, S., Boxler, M., Gallo, S., Pozzi, R., **A. Correndo**, Garcia, F.O., 2018. Does balanced fertilization improve soil health? Better Crops With Plant Food, Vol. CII (102), No. 1:18-20. <http://www.ipni.net/publication/bettercrops.nsf/issue/BC-2018-1>
+19. **Correndo, A.A.**, & I.A. Ciampitti. 2020. Corn yield response to nitrogen in North Central Kansas. Kansas Agricultural Experiment Station Research Reports: Vol. 6(5). <https://doi.org/10.4148/2378-5977.7921>
 
-20. **Correndo, A.A.**, F. Permingeat, P. Gelso, S. Gallo, R. Pozzi, M. Salinas, N.I. Reussi Calvo, A. Berardo, & F.O. García. 2017. Long-term Crop Nutrition Network of CREA Southern Santa Fe. Results of 2016/17 Cropping Season: Maize. Available at: <http://research.ipni.net/page/RLAS-2571>
+20. **Correndo, A.A.**, & I.A. Ciampitti. 2019. Pursuing the Best Management Strategies for Corn-Soybean Rotation Systems in North Central Kansas. Kansas Agricultural Experiment Station Research Reports: Vol. 5: Iss. 6. <https://doi.org/10.4148/2378-5977.7798>
 
-21. **Correndo, A.A.**, F. Permingeat, P. Gelso, S. Gallo, R. Pozzi, M. Salinas, N.I. Reussi Calvo, A. Berardo, & F.O. García. 2017. Long-term Crop Nutrition Network of CREA Southern Santa Fe. Results of 2016/17 Cropping Season: Soybean. Available at: <http://research.ipni.net/page/RLAS-2572>
+21. Garcia, F.O., Grasso, A., Gonzalez Sanjuan, M.F., **Correndo, A.**, Salvagiotti, F.O., 2018. Connecting crop nutrient use efficiency to future soil productivity. Better Crops With Plant Food, Vol. CII (102), No. 4:8-10. <http://www.ipni.net/publication/bettercrops.nsf/issue/BC-2018-4>
 
-22. Boxler, M., F.O. García, **A.A. Correndo**, S. Gallo, R. Pozzi, M. Uranga, M. Salinas, N.I. Reussi Calvo & A. Berardo. 2017. Long-term Crop Nutrition Network of CREA Southern Santa Fe. Results of 2015/16 Cropping Season: Soybean. Available at: <http://research.ipni.net/page/RLAS-2564>
+22. Ferreras, L., Magra, G., Saperdi, A., Toresani, S., Boxler, M., Gallo, S., Pozzi, R., **A. Correndo**, Garcia, F.O., 2018. Does balanced fertilization improve soil health? Better Crops With Plant Food, Vol. CII (102), No. 1:18-20. <http://www.ipni.net/publication/bettercrops.nsf/issue/BC-2018-1>
+
+23. **Correndo, A.A.**, F. Permingeat, P. Gelso, S. Gallo, R. Pozzi, M. Salinas, N.I. Reussi Calvo, A. Berardo, & F.O. García. 2017. Long-term Crop Nutrition Network of CREA Southern Santa Fe. Results of 2016/17 Cropping Season: Maize. Available at: <http://research.ipni.net/page/RLAS-2571>
+
+24. **Correndo, A.A.**, F. Permingeat, P. Gelso, S. Gallo, R. Pozzi, M. Salinas, N.I. Reussi Calvo, A. Berardo, & F.O. García. 2017. Long-term Crop Nutrition Network of CREA Southern Santa Fe. Results of 2016/17 Cropping Season: Soybean. Available at: <http://research.ipni.net/page/RLAS-2572>
+
+25. Boxler, M., F.O. García, **A.A. Correndo**, S. Gallo, R. Pozzi, M. Uranga, M. Salinas, N.I. Reussi Calvo & A. Berardo. 2017. Long-term Crop Nutrition Network of CREA Southern Santa Fe. Results of 2015/16 Cropping Season: Soybean. Available at: <http://research.ipni.net/page/RLAS-2564>
 
 # 📓Book Chapters
 
-1.  Majumdar, K., S. Zingore, F. García, **A. Correndo**, J. Timsina, & A.M. Johnston. 2017. Chapter 8: Improving Nutrient Management for Sustainable Intensification of Maize. In: Watson D. (2017). Achieving sustainable cultivation of maize, Volume 2. Cultivation techniques, pest and disease control. Burleigh Dodds Series in Agricultural Science. 400p. ISBN-13: 9781786760128.
+1. García, F.O., **Correndo, A.A.**, Reussi Calvo, N., Monzon, J.P., Ciampitti, I.A., Salvagiotti, F., Chapter 7: Crop Nutrition. In: Andrade, F., Otegui, M.E., Cirilo, A., & Uhart, S. (2023). Ecofisiologia del cultivo de maiz. 486p. ISBN 978-987-88-8326-7. [LINK](https://sites.google.com/agro.uba.ar/libroecofisiologadelcultivodem/inicio)
 
-2.  **Correndo, A.A.**, & F.O. García. 2016. Pautas para el manejo del fósforo en trigo. In: Trigo. Cuaderno de Actualización Técnica. AACREA, Buenos Aires, Argentina.
 
-3.  García, F.O., and **A.A. Correndo**. 2016. Fertilidad de Suelos y Uso de Fertilizantes para una Agricultura Sustentable. Recursos Naturales y Suelos. GEPAMA FADU UBA --ECOLOGIA UNGS -- FHB.
+2.  Majumdar, K., S. Zingore, F. García, **A. Correndo**, J. Timsina, & A.M. Johnston. 2017. Chapter 8: Improving Nutrient Management for Sustainable Intensification of Maize. In: Watson D. (2017). Achieving sustainable cultivation of maize, Volume 2. Cultivation techniques, pest and disease control. Burleigh Dodds Series in Agricultural Science. 400p. ISBN-13: 9781786760128.
 
-4.  **Correndo, A.A.**, and F.O. García. 2014. Bases para la nutrición del cultivo de maíz. In: Maíz. Técnicas probadas para una producción rentable. 96pp. AACREA, Buenos Aires, Argentina.
+3.  **Correndo, A.A.**, & F.O. García. 2016. Pautas para el manejo del fósforo en trigo. In: Trigo. Cuaderno de Actualización Técnica. AACREA, Buenos Aires, Argentina.
 
-5.  **Correndo A.A.**, & F.O. García. 2014. Diagnóstico del nitrógeno en el cultivo de maíz: ¿Cómo lograr un análisis de suelo confiable? In: L. Borras (Ed.). Manejo eficiente del nitrógeno en maíces flint. Facultad de Ciencias Agrarias, Universidad Nacional de Rosario. pp. 67-80.
+4.  García, F.O., and **A.A. Correndo**. 2016. Fertilidad de Suelos y Uso de Fertilizantes para una Agricultura Sustentable. Recursos Naturales y Suelos. GEPAMA FADU UBA --ECOLOGIA UNGS -- FHB.
 
-6.  García F.O. and **A.A. Correndo**. 2012. Fertilización en el cultivo de soya. Manual de Difusión Técnica de Soya. Fundacruz. Santa Cruz de la Sierra, Bolivia. pp. 158-170.
+5.  **Correndo, A.A.**, and F.O. García. 2014. Bases para la nutrición del cultivo de maíz. In: Maíz. Técnicas probadas para una producción rentable. 96pp. AACREA, Buenos Aires, Argentina.
 
-7.  García, F., M. Boxler, J. Minteguiaga, R. Pozzi, L. Firpo, I. Ciampitti, **A. Correndo**, F. Bauschen, A. Berardo, and N. Reussi Calvo. 2010. La Red de Nutrición de la Región Crea Sur de Santa Fe: Resultados y conclusiones de los primeros diez años 200-2009. 2a. ed. AACREA. Buenos Aires, Argentina. ISBN 978-987-1513-07-9. 64 pp.
+6.  **Correndo A.A.**, & F.O. García. 2014. Diagnóstico del nitrógeno en el cultivo de maíz: ¿Cómo lograr un análisis de suelo confiable? In: L. Borras (Ed.). Manejo eficiente del nitrógeno en maíces flint. Facultad de Ciencias Agrarias, Universidad Nacional de Rosario. pp. 67-80.
+
+7.  García F.O. and **A.A. Correndo**. 2012. Fertilización en el cultivo de soya. Manual de Difusión Técnica de Soya. Fundacruz. Santa Cruz de la Sierra, Bolivia. pp. 158-170.
+
+8.  García, F., M. Boxler, J. Minteguiaga, R. Pozzi, L. Firpo, I. Ciampitti, **A. Correndo**, F. Bauschen, A. Berardo, and N. Reussi Calvo. 2010. La Red de Nutrición de la Región Crea Sur de Santa Fe: Resultados y conclusiones de los primeros diez años 200-2009. 2a. ed. AACREA. Buenos Aires, Argentina. ISBN 978-987-1513-07-9. 64 pp.
 
 # 📓Conferences
 
-### Total (31)
+### Total (36)
 
-## Most recent (10)
+### Most recent (15)
 
-1.  Ciampitti, I.A., **Correndo, A.A.**. 2022. Re-thinking effective use of niutrogen in major field crops, integrating breeding and management. Aug. 1-3, Lincoln, NE, USA. <https://agronomy.unl.edu/workshops-fielddays/NUE/presentations/Correndo_Ciampitti.pdf>
+1. Bolster, C., **Correndo, A.A.**, Pearce, A., Spargo, J.T., Slaton, N.A., Osmond, D.L. 2022. A Spreadsheet for Determining Critical Soil Test Values Using the Modified Arcsine-Log Calibration Curve. Nov 6-9, Baltimore, MD, USA. [LINK](https://scisoc.confex.com/scisoc/2022am/meetingapp.cgi/Paper/145009)
 
-2.  **Correndo, A.A.**, Hefley, T., Holzworth, D., and Ciampitti, I. A., 2021. How should we use linear regression to test models performance?. 2021 ASA-CSSA-SSSA Meetings. Nov. 7-10, Salt Lake City, UT, USA. <https://scisoc.confex.com/scisoc/2021am/meetingapp.cgi/Paper/135506>
+2. **Correndo, A.A.**, Ciampitti, I.A. 2022. The Venture Creation in Data Science: Developing Packages and Web Tools Using R. Nov 6-9, Baltimore, MD, USA. <https://scisoc.confex.com/scisoc/2022am/meetingapp.cgi/Paper/142282>
 
-3.  **Correndo, A.A.**, Tremblay, N., Coulter, J. A., Ruiz Diaz, D. A., Franzen, D. W., Nafziger, E., Prasad, P. V. V., Rosso, L. M., Steinke, K., Du, J., Messina, C. D., and Ciampitti, I. A.. 2021. Disentangling Corn Yield Response to Nitrogen with Bayesian and Machine Learning Models. 2021 ASA-CSSA-SSSA Meetings. Nov. 7-10, Salt Lake City, UT, USA. <https://scisoc.confex.com/scisoc/2021am/meetingapp.cgi/Paper/135568>
+3. **Correndo, A.A.**, Holzworth, D., Ciampitti, I.A. 2022. Comparing Error Metrics to Test Predicted-Observed Agreement for Continuous Variables. Nov 6-9, Baltimore, MD, USA. <https://scisoc.confex.com/scisoc/2022am/meetingapp.cgi/Paper/142306>
 
-4.  **Correndo, A.A.**, & I. Ciampitti. 2020. Forecasting corn yield in Kansas. 2019 Kansas Corn Symposium. Jan. 23, Manhattan, KS, USA.
+4. Antunes de Almeida, L.F., **Correndo, A.A.**, et al. 2022. Soybean Yield Response to Nitrogen and Sulfur Fertilization in the United States. Nov 6-9, Baltimore, MD, USA. <https://scisoc.confex.com/scisoc/2022am/meetingapp.cgi/Paper/143887>
 
-5.  **Correndo, A.A.**, N. Tremblay, J. Rotundo, J. DeBruin, C. Messina, R. Schwalbert, J. Coulter, D. Ruiz-Diaz, A. Franzluebbers, J. Williams, S. Archontoulis, K. Steinke, E. Nafziger, D. Franzen, & I. Ciampitti. 2019. Corn nitrogen responsiveness in North America: a review. 2019 ASA-CSSA-SSSA Meetings. Nov. 10-13, San Antonio, TX, USA.
+5. Giordano, N., **Correndo, A.A.**, Sadras, V.O., Lollato, R. 2022. Phenotypic Plasticity Unravels Genotype Specific Response to Nitrogen in Winter Wheat. Nov 6-9, Baltimore, MD, USA. <https://scisoc.confex.com/scisoc/2022am/meetingapp.cgi/Paper/142402>
 
-6.  **Correndo, A.A.**, & I. Ciampitti. 2019. Breaking Yield Barriers in Corn-Soybean. 2019 Kansas Corn Symposium. Jan. 23, Manhattan, KS, USA.
+6.  Ciampitti, I.A., **Correndo, A.A.**. 2022. Re-thinking effective use of niutrogen in major field crops, integrating breeding and management. Aug. 1-3, Lincoln, NE, USA. <https://agronomy.unl.edu/workshops-fielddays/NUE/presentations/Correndo_Ciampitti.pdf>
 
-7.  **Correndo, A.A.**, F. Salvagiotti, F. García, & F.H. Gutiérrez-Boem. 2018. Attainable yield and soil texture as drivers of pre-plant nitrogen test performance in corn in the argentine pampas. 2018 ASA-CSSA meetings. Nov. 4-7, Baltimore, MD, USA.
+7.  **Correndo, A.A.**, Hefley, T., Holzworth, D., and Ciampitti, I. A., 2021. How should we use linear regression to test models performance?. 2021 ASA-CSSA-SSSA Meetings. Nov. 7-10, Salt Lake City, UT, USA. <https://scisoc.confex.com/scisoc/2021am/meetingapp.cgi/Paper/135506>
 
-8.  Balboa, G., **A. Correndo**, M. Stewart, F. Salvagiotti, F.O. Garcia, E. Francisco, J.M Enrico and I.A. Ciampitti. 2018. Intensifying Soybean Management Systems in United States, Brazil and Argentina. 2018 ASA-CSSA meetings. Nov. 4-7, Baltimore, MD, USA.
+8.  **Correndo, A.A.**, Tremblay, N., Coulter, J. A., Ruiz Diaz, D. A., Franzen, D. W., Nafziger, E., Prasad, P. V. V., Rosso, L. M., Steinke, K., Du, J., Messina, C. D., and Ciampitti, I. A.. 2021. Disentangling Corn Yield Response to Nitrogen with Bayesian and Machine Learning Models. 2021 ASA-CSSA-SSSA Meetings. Nov. 7-10, Salt Lake City, UT, USA. <https://scisoc.confex.com/scisoc/2021am/meetingapp.cgi/Paper/135568>
 
-9.  **Correndo, A.A.**, & F.O. Garcia. 2018. The utopia of the balanced fertilization of the cropping systems in Argentina. Proceedings of XXVI Argentinean Soil Science Congress. 15-18th, May 2018. Tucumán, Argentina.
+9.  **Correndo, A.A.**, & I. Ciampitti. 2020. Forecasting corn yield in Kansas. 2019 Kansas Corn Symposium. Jan. 23, Manhattan, KS, USA.
 
-10. **Correndo, A.A.**, F. Salvagiotti, F. García, & F.H. Gutiérrez-Boem. 2018. Recalibration of Bray1-P critical thresholds for corn and soybean in Argentina. CLAP 2018. I Latin American Congress of Precision Agriculture. 11-13th April 2018. Santiago, Chile. [DOI: 10.13140/RG.2.2.28706.73922](https://www.researchgate.net/publication/324703753_Recalibracion_de_umbrales_criticos_de_P-Bray_para_maiz_y_soja_en_Argentina)
+10.  **Correndo, A.A.**, N. Tremblay, J. Rotundo, J. DeBruin, C. Messina, R. Schwalbert, J. Coulter, D. Ruiz-Diaz, A. Franzluebbers, J. Williams, S. Archontoulis, K. Steinke, E. Nafziger, D. Franzen, & I. Ciampitti. 2019. Corn nitrogen responsiveness in North America: a review. 2019 ASA-CSSA-SSSA Meetings. Nov. 10-13, San Antonio, TX, USA.
+
+11.  **Correndo, A.A.**, & I. Ciampitti. 2019. Breaking Yield Barriers in Corn-Soybean. 2019 Kansas Corn Symposium. Jan. 23, Manhattan, KS, USA.
+
+12.  **Correndo, A.A.**, F. Salvagiotti, F. García, & F.H. Gutiérrez-Boem. 2018. Attainable yield and soil texture as drivers of pre-plant nitrogen test performance in corn in the argentine pampas. 2018 ASA-CSSA meetings. Nov. 4-7, Baltimore, MD, USA.
+
+13.  Balboa, G., **A. Correndo**, M. Stewart, F. Salvagiotti, F.O. Garcia, E. Francisco, J.M Enrico and I.A. Ciampitti. 2018. Intensifying Soybean Management Systems in United States, Brazil and Argentina. 2018 ASA-CSSA meetings. Nov. 4-7, Baltimore, MD, USA.
+
+14.  **Correndo, A.A.**, & F.O. Garcia. 2018. The utopia of the balanced fertilization of the cropping systems in Argentina. Proceedings of XXVI Argentinean Soil Science Congress. 15-18th, May 2018. Tucumán, Argentina.
+
+15. **Correndo, A.A.**, F. Salvagiotti, F. García, & F.H. Gutiérrez-Boem. 2018. Recalibration of Bray1-P critical thresholds for corn and soybean in Argentina. CLAP 2018. I Latin American Congress of Precision Agriculture. 11-13th April 2018. Santiago, Chile. [DOI: 10.13140/RG.2.2.28706.73922](https://www.researchgate.net/publication/324703753_Recalibracion_de_umbrales_criticos_de_P-Bray_para_maiz_y_soja_en_Argentina)
 
 # 
 :::
